[gd_scene load_steps=6 format=3 uid="uid://bluxp1h4dqech"]

[ext_resource type="Script" path="res://Scenes/levels/LevelStartFromTimer.gd" id="1_oucbi"]
[ext_resource type="PackedScene" uid="uid://co4engn5l2q3u" path="res://Scenes/levels/sandbox.tscn" id="2_s7gn1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yyh2v"]
height = 6.0
radius = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_eo8uv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bqpbo"]
transparency = 1
blend_mode = 1

[node name="LevelStart" type="Node3D"]
script = ExtResource("1_oucbi")
LEVEL_SCENE = ExtResource("2_s7gn1")

[node name="LevelStartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="LevelStartArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelStartArea"]
shape = SubResource("CylinderShape3D_yyh2v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LevelStartArea"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("CylinderMesh_eo8uv")
surface_material_override/0 = SubResource("StandardMaterial3D_bqpbo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ObjectiveCountdown" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 28.8
anchor_right = 28.8
offset_left = -676.0
offset_top = 27.0
offset_right = -472.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="LevelStartTimer" to="." method="_on_level_start_timer_timeout"]
[connection signal="body_entered" from="LevelStartArea" to="." method="_on_level_start_area_body_entered"]
[connection signal="body_exited" from="LevelStartArea" to="." method="_on_level_start_area_body_exited"]
